--- a/responsive/contacto.html
+++ b/responsive/contacto.html
@@ -12,13 +12,11 @@
 </head>
 
 <body>
-
-    <!-- Menu -->
     <!-- Menu -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-primary bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="./public/media/img/logo.png" class="img-fluid" alt="Logo de la empresa" width="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,28 +27,27 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#"><i class="bi bi-people-fill">
+                                </i>Nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Cafeteria</a></li>
-                                <li><a class="dropdown-item" href="#">Recoleccion basura</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="bi bi-search"></i>Cafeteria</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="bi bi-search"></i>Recolección de
+                                        basuras</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Servicios hogar</a>
-                                <li>
+                                <li><a class="dropdown-item" href="#"><i class="bi bi-search"></i>Uñas y Pies</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link disabled" aria-disabled="true">Contactenos</a>
                         </li>
                     </ul>
 
@@ -59,7 +56,8 @@
                             <a class="nav-link text-light" href="#">Mi cuenta</a>
                         </li>
                     </ul>
-
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -73,37 +71,36 @@
 
                 <div class="col">
                     <h1 class="display-4 text-center">Contactenos:</h1>
-                    <form action="">
+                    <form action="" name="contacto" method="post">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <input type="text" class="form-control" id="nombre" placeholder="name@example.com">
                             <label for="nombre"> <i class="bi bi-person"> </i>Nombre</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="email" class="form-control" id="correo" placeholder="Password">
                             <label for="correo"> <i class="bi bi-envelope-at"> </i>Correo</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="telefono" placeholder="Password">
                             <label for="telefono"> <i class="bi bi-phone-vibrate"> </i>Teléfono</label>
-
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Escriba su mensaje"
-                                    id="floatingTextarea"></textarea>
-                                <label for="floatingTextarea">Mensaje <i class="bi bi-chat-square-text"></i></label>
-                            </div>
-                            <br>
-                            <div class="row justify-content-end mx-2">
-                                <buttom class="btn btn-primary col-4"> Enviar <i class="bi bi-send"> </i> </buttom>
-                            </div>
-
                         </div>
-                    </form>
+
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Escriba su mensaje"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Mensaje <i class="bi bi-chat-square-text"></i></label>
+                        </div>
+                        <br>
+                        <div class="row justify-content-end mx-2">
+                            <buttom class="btn btn-primary col-4"><i class="bi bi-send"> </i>Enviar</buttom>
+                        </div>
+
                 </div>
+                </form>
+            </div>
             </div>
         </section>
     </main>
-
-    </header>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
